PixelFantasy Fix When clicked on the showbox will cause the double scroller to appear.

--- a/PixelFantasy/sass/index.sass
+++ b/PixelFantasy/sass/index.sass
@@ -36,18 +36,9 @@ body
     .container
         padding-top: 0px
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.containerScrollHidden
-    -ms-overflow-style: none  // IE and Edge
-    scrollbar-width: none  // Firefox
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.containerScrollHidden::-webkit-scrollbar
-    display: none
-
 @import _nav
-                
-.headline     
+       
+.headline
     font-size: 1.6em        
     text-align: left
     border-bottom: 1px solid rgba(0, 0, 0, 0.2)
@@ -277,6 +268,9 @@ body
 
 .d-none
     display: none !important
+
+.overflow-hidden
+    overflow: hidden !important
 
 .content
     float: left
